--- a/index.html
+++ b/index.html
@@ -42,5 +42,7 @@ img
   <p></p>
   <p><a href="https://twitter.com/YourAnonNewsNp">FOLLOW US ON : TWITTER</a></p>
   <p>&copy; YourAnonNewsNp</p>
+        <h2>LIST OF OPERATIONS :</h2>
+        <p><a href="/opnayanepal.html">#OpNayaNepal</a>
 </div>    
 </html>
