--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ html {
 <p class="glowtext">$ WE DO NOT FORGIVE
 <p class="glowtext">$ WE DO NOT FORGET 
 <p class="glowtext">$ EXPECT US !
-<p class="glowtext">&copy; YourAnonNewsNp | <mailto:youranonnewsnp@protonmail.com>e-mail</p>   
+<p class="glowtext">&copy; YourAnonNewsNp | <a href="mailto:youranonnewsnp@protonmail.com">E-MAIL</a>   
 
  
 </body>
