--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ html {
 <div class="content" id="chat">
 <h2>CHAT</h2>
 <p class="glowtext">$ HOW TO JOIN I.R.C ??
-<p class="glowtext">$ 1. visit <a href="webchat.anonops.com">anonops-irc-webchat</a>
+<p class="glowtext">$ 1. visit <a href="https://webchat.anonops.com">anonops-irc-webchat</a>
 <p class="glowtext">$ 2. join the anonymous-operations with a nickname ! 
 <p class="glowtext">$ 3. server will add you in #OpNewBlood channel !
 <p class="glowtext">$ 4. register your nickname by learning from the people over there !
