--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 
-<img src="https://i.imgur.com/hbAYUBE.png" alt="Logo Loading ..">
+<img src="https://i.imgur.com/hAdz1hL.png" alt="Logo Loading ..">
 
 <title>YourAnonNewsNp</title>
 
