--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <img src="https://i.imgur.com/hAdz1hL.png" alt="Logo Loading ..">
 
-<title>YourAnonNewsNp</title>
+<title>Anonymous Nepal</title>
 
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -104,11 +104,11 @@ html {
 
 
 <div class="content" id="news">
-<p class="name">YourAnonNewsNp</p>
+<p class="name">Anonymous Nepal</p>
 <h2><i class="fa fa-newspaper-o" aria-hidden="true"></i> NEWS</h2>
 
 <div class="content" id="operations">
-    <a href="https://twitter.com/YourAnonNewsNp" class="learn"><p><i class="fa fa-newspaper-o"></i> TWITTER HANDLE</a>
+    <a href="https://twitter.com/GreyHatNepal" class="learn"><p><i class="fa fa-newspaper-o"></i> TWITTER HANDLE</a>
 
 <h2><i class="fa fa-bolt" aria-hidden="true"></i> OPERATIONS</h2>
 <p></p>
@@ -184,8 +184,8 @@ html {
 <p class="glowtext">$ 2. join the anonymous-operations with a nickname ! 
 <p class="glowtext">$ 3. server will add you in #OpNewBlood channel !
 <p class="glowtext">$ 4. register your nickname by learning from the people over there !
-<p class="glowtext">$ 5. after registration ! join the #youranonnewsnp channel !
-<p class="glowtext">$ 6. to join our channel use command :- /join #youranonnewsnp
+<p class="glowtext">$ 5. after registration ! join the #greyhatnepal channel !
+<p class="glowtext">$ 6. to join our channel use command :- /join #greyhatnepal
 <p class="glowtext">$ 7. you will be welcomed over there !
 <p class="glowtext"></p>
 <p class="glowtext">* OPTION 2 *
@@ -196,7 +196,7 @@ html {
 <p class="glowtext">$ WE DO NOT FORGIVE
 <p class="glowtext">$ WE DO NOT FORGET 
 <p class="glowtext">$ EXPECT US !
-<p class="glowtext">&copy; YourAnonNewsNp | <a href="mailto:youranonnewsnp@protonmail.com">E-MAIL</a>   
+<p class="glowtext">&copy; YourAnonNewsNp | <a href="mailto:greyhatnepal@protonmail.com">E-MAIL</a>   
 
  
 </body>
