--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ html {
 
 <h2><i class="fa fa-bolt" aria-hidden="true"></i> OPERATIONS</h2>
 <p></p>
-<a href="https://pastebin.com/jJSdttym" class="learn"><i class="fa fa-bolt" aria-hidden="true"></i> #OpNayaNepal</a>
+<a href="https://pastebin.com/6sa8NHsT" class="learn"><i class="fa fa-bolt" aria-hidden="true"></i> #OpNayaNepal</a>
 </div>
 
 
